# pylinkaudio

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
cmake/: link-version.cmake
examples/: audio_recv.py  audio_send.py  raspberry_pi_setup.md  tempo_sync.py
src/_core/: link_audio.cpp  link_core.cpp  module.cpp
src/pylinkaudio/: __init__.py  _version.py
tests/: test_core.py
