[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.12",
    "setuptools_scm>=8",
]
build-backend = "scikit_build_core.build"

[project]
name = "pylinkaudio"
description = "Python bindings for Ableton Link 4.0 with Link Audio support"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Mac Digi" }]
requires-python = ">=3.11"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "sounddevice>=0.4",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
cmake.version = ">=3.28"
wheel.packages = ["src/pylinkaudio"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/pylinkaudio/_version.py"]

[tool.setuptools_scm]
write_to = "src/pylinkaudio/_version.py"
fallback_version = "0.1.0.dev0"

[tool.pytest.ini_options]
markers = [
    "network: tests that require a live Link peer on the LAN (skipped in CI)",
]
